<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/natinaldataperday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8BC34A"
        android:gravity="center"
        android:text="@string/national_daily_cases"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupMetricSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/natinaldataperday">

        <RadioButton
            android:id="@+id/radioButtonRecovered"
            android:layout_width="wrap_content"
            style="@style/CustomRadioButton"
            android:layout_height="wrap_content"
            android:text="@string/recovered" />

        <RadioButton
            android:id="@+id/radioButtonPositive"
            android:layout_width="wrap_content"
            style="@style/CustomRadioButton"
            android:layout_height="wrap_content"
            android:text="@string/positive" />

        <RadioButton
            android:id="@+id/radioButtonDeath"
            android:layout_width="wrap_content"
            style="@style/CustomRadioButton"
            android:layout_height="wrap_content"
            android:text="@string/deaths" />

    </RadioGroup>

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/backgroundshade"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTimeSelection"
        app:layout_constraintTop_toBottomOf="@id/radioGroupMetricSelection" />

    <RadioGroup
        android:id="@+id/radioGroupTimeSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_goneMarginTop="16dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundshade"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tickerView">

        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:layout_width="wrap_content"
            style="@style/CustomRadioButton"
            android:layout_height="wrap_content"
            android:text="@string/_1_week" />

        <RadioButton
            android:id="@+id/radioButtonMonth"
            android:layout_width="wrap_content"
            style="@style/CustomRadioButton"
            android:layout_height="wrap_content"
            android:text="@string/_1_month" />

        <RadioButton
            android:id="@+id/radioButtonMax"
            android:layout_width="wrap_content"
            style="@style/CustomRadioButton"
            android:layout_height="wrap_content"
            android:text="@string/max" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="#80CDDC39"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="May 31, 2020" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/tickerView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#80FF5722"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDateLabel"
        tools:text="1,11,000,00" />


</androidx.constraintlayout.widget.ConstraintLayout>